<resources>
    <string name="app_name">Senior Security System</string>
    <string name="in_app_name">Senior \nSecurity \nSystem</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="next">Next</string>
    <string name="already">Already registered?</string>
    <string name="not_here">Not yet on SSS?</string>
    <string name="prompt_password">Password</string>
    <string name="register">Register!</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome back!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_map">Map</string>
    <string name="title_camera">Camera</string>
    <string name="title_analysis">Analysis</string>
    <string name="map_label">Senior Location Detected</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!--                  Drawer texts                        -->
    <string name="SettingsDrawer">Settings</string>
    <string name="HomepageDrawer">Homepage</string>
    <string name="UserDrawer">User Settings</string>
    <string name="BehaviourTrackingDrawer">Behaviour Tracking</string>
    <string name="DataAnalysisDrawer">Data Analysis</string>
    <string name="HouseAlarmsDrawer">House Alarms</string>
    <string name="HealthAndVitalsDrawer">Health and Vitals</string>
    <string name="CamerasDrawer">Cameras</string>
    <string name="DashboardDrawer">Dashboard</string>
    <string name="LogoutDrawer">Logout</string>

    <string name="Camera_Label_Title">Living Room</string>
    <string name="current_vitals">Current Vitals:</string>
    <string name="blood_pressure">Blood Pressure: 120/80 mmHg</string>
    <string name="heart_rate">Heart Rate: 72 BPM</string>

    <!--                Dashboard strings           -->
    <string name="AddButton">Add new house</string>
    <string name="CurrentHouse">Current Houses</string>
    <string name="dashboard">Dashboard</string>
    <string name="addHouse">Add a New House</string>



    <!--                User Settings strings           -->
    <string name="title_activity_user_settings">User Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>